<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="Complete Your Profile!"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/LastNameTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/LastNameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/test"
        app:layout_constraintBottom_toTopOf="@+id/AddressTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/LastName"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:hint="@string/Last_name"
            android:inputType="textPersonName"
            tools:ignore="MissingPrefix" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/firstNameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/test"
        app:layout_constraintEnd_toStartOf="@+id/LastNameTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/First_name"
            android:inputType="textPersonName"
            tools:ignore="MissingPrefix" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/AddressTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/test"
        app:layout_constraintBottom_toTopOf="@+id/AgeTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastNameTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/Address"
            android:inputType="textPersonName"
            tools:ignore="MissingPrefix" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/AgeTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/test"
        app:layout_constraintBottom_toTopOf="@+id/MobnoTextInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddressTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Age"
            android:inputType="textPersonName"
            tools:ignore="MissingPrefix" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/MobnoTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AgeTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/AddressTextInputLayout" />

    <Button
        android:id="@+id/GetStarted"
        style="@style/SolidButtonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="Get Started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MobnoTextInputLayout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/MobnoTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/test"
        app:layout_constraintBottom_toTopOf="@+id/GetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgeTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Mobno"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:hint="@string/Mob_no"
            android:inputType="textPersonName"
            tools:ignore="MissingPrefix" />

    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>